--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.web.resources.add-mappings=false
+spring.mvc.throw-exception-if-no-handler-found=true
