--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tocountornot?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.web.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
